[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "verifier"
version = "0.1.0"
description = "Logic-agnostic formalism DSL for software requirements and test cases."
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]

[tool.setuptools]
packages = ["verifier"]
