[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "verifier"
version = "0.1.0"
description = "Logic-agnostic formalism DSL for software requirements and test cases."
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
verifier = "verifier.cli:main"

[tool.setuptools]
packages = ["verifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
